--- a/2019-08-08/example_Cover.css
+++ b/2019-08-08/example_Cover.css
@@ -69,4 +69,11 @@ button.btn-primary.btn-light {
     border-bottom-color: white;
 }
 
-s
+
+/* .Header__Row_Secon-Six-Col___Un-Order-List__List-Item--border-width */
+
+
+/* .Header__Row_Secon-Six-Col___Un-Order-List__List-Item--un-active */
+
+
+/* Header__Row_Secon-Six-Col___Un-Order-List__List-Item--hover:hover */
